--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,4 +13,10 @@
  */
 
 // Custom bootstrap variables must be set or imported *before* bootstrap.
+
+.google
+ {
+    font-size: 50px
+ }
+
 @import "bootstrap";
