Changed masthead image and removed nav bar in homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,8 +26,8 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Kunwari Google</a>
-      <%= link_to users_path do%> <button type ="submit" class="btn btn-primary">Admin</button> <% end %>
+      <!-- <a class="navbar-brand" href="#">Kunwari Google</a> -->
+      <!-- <%= link_to users_path do%> <button type ="submit" class="btn btn-primary">Admin</button> <% end %> -->
     </div>
   </nav>
 
